Allow disabling of dbus interface
This introduces DBUS_CONTROL_ENABLED which allows the compile time
removal of the sdbus dependency.

It introduces the configure option:

  --enable-dbus           Enable D-Bus interface and tool for controlling the
                          daemon [default=yes]

Change-Id: I2bd701b8314e7c96d38c570363daca9f8292ef5f
Signed-off-by: Joel Stanley <joel@jms.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,10 @@
 ACLOCAL_AMFLAGS = -I m4
-sbin_PROGRAMS = mboxd mboxctl
+sbin_PROGRAMS = mboxd
 
 mboxd_SOURCES = \
 	mboxd.c \
 	common.c \
 	control.c \
-	control_legacy.c \
-	control_dbus.c \
 	lpc.c \
 	mboxd_msg.c \
 	windows.c \
@@ -14,16 +12,24 @@ mboxd_SOURCES = \
 mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
+if DBUS_INTERFACE_ENABLED
+mboxd_SOURCES += \
+	control_legacy.c \
+	control_dbus.c
+
+sbin_PROGRAMS += mboxctl
+
+mboxctl_SOURCES = mboxctl.c
+mboxctl_LDFLAGS = $(LIBSYSTEMD_LIBS)
+mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
+endif
+
 if VIRTUAL_PNOR_ENABLED
 include vpnor/Makefile.am.include
 else
 mboxd_SOURCES += flash.c \
 	lpc_reset.c
 endif
-
-mboxctl_SOURCES = mboxctl.c
-mboxctl_LDFLAGS = $(LIBSYSTEMD_LIBS)
-mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
 @CODE_COVERAGE_RULES@
 
