Move flash.c to the new mtd backing folder.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ mboxd_SOURCES = \
 	control_dbus.c \
 	lpc.c \
 	protocol.c \
+	protocol_negotiate_version.c \
 	transport_dbus.c \
 	transport_mbox.c \
 	windows.c \
@@ -16,11 +17,13 @@ mboxd_SOURCES = \
 mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
+# MTD Backing storage
+include mtd/Makefile.am.include
+
 if VIRTUAL_PNOR_ENABLED
+# VPNOR Backing storage
 include vpnor/Makefile.am.include
 endif
-mboxd_SOURCES += flash.c \
-	protocol_negotiate_version.c
 
 mboxctl_SOURCES = mboxctl.c
 mboxctl_LDFLAGS = $(LIBSYSTEMD_LIBS)
