Add a backend abstraction layer to mboxd.
This commit adds a new backing abstraction layer, enabling multiple
   to be compield in at a time. This change creates two backends:
   (1) The /dev/mtd backend
   (2) the vpnor backend

This will be used to enabled a file backend.

Change-Id: I29984a36dae4ea86ec00b853d2a756f0b9afb3ec
Signed-off-by: Evan Lojewski <github@meklort.com>

--- a/vpnor/Makefile.am.include
+++ b/vpnor/Makefile.am.include
@@ -1,10 +1,7 @@
 mboxd_SOURCES += %reldir%/pnor_partition_table.cpp \
 	%reldir%/mboxd_pnor_partition_table.cpp \
 	%reldir%/flash.cpp \
-	%reldir%/pnor_partition.cpp \
-	%reldir%/lpc_reset.cpp \
-	%reldir%/protocol.cpp \
-	%reldir%/protocol_negotiate_version.cpp
+	%reldir%/pnor_partition.cpp
 
 mboxd_LDFLAGS += -lstdc++fs \
 	$(SDBUSPLUS_LIBS) \
