mboxd: Add support for file-backed flash devices.
This commit adds a new file  based backing source.
The file based backing source takes a raw pnor image that is
    usually flassed to a /dev/dtd device.

This backing source enabled rapid testing of pnor files.

Change-Id: I253ecfa6b58d071c7982f153ad50da8e4ad39fa2
Signed-off-by: Evan Lojewski <github@meklort.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,9 @@ mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 # MTD Backing storage
 include mtd/Makefile.am.include
 
+#File Backing storage
+include file/Makefile.am.include
+
 if VIRTUAL_PNOR_ENABLED
 # VPNOR Backing storage
 include vpnor/Makefile.am.include
