--- a/configure.ac
+++ b/configure.ac
@@ -51,14 +51,9 @@ AC_ARG_ENABLE([virtual-pnor],
 )
 AS_IF([test "x$enable_virtual_pnor" == "xyes"],
     [
-        PKG_CHECK_MODULES([SDBUSPLUS], [sdbusplus],,\
-                          AC_MSG_ERROR(["Requires sdbusplus package."]))
-
-        PKG_CHECK_MODULES([PHOSPHOR_LOGGING], [phosphor-logging],,\
-                          AC_MSG_ERROR(["Requires phosphor-logging package."]))
-
-        AX_PKG_CHECK_MODULES([PHOSPHOR_DBUS_INTERFACES], [],[phosphor-dbus-interfaces],\
-                             [], [AC_MSG_ERROR(["phosphor-dbus-interfaces required and not found."])])
+        PKG_CHECK_MODULES([SDBUSPLUS], [sdbusplus])
+        PKG_CHECK_MODULES([PHOSPHOR_LOGGING], [phosphor-logging])
+        AX_PKG_CHECK_MODULES([PHOSPHOR_DBUS_INTERFACES], [],[phosphor-dbus-interfaces])
 
         AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, true)
         AX_APPEND_COMPILE_FLAGS([-DVIRTUAL_PNOR_ENABLED], [CXXFLAGS])
