test/flash_copy: Configure MTD device to avoid undefined behaviour
Otherwise we observe invalid memory accesses due to uninitialised
variables.

Change-Id: I8b9063ccc9a25b225a562ebe120f2a99a28788ca
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -4,7 +4,8 @@ test_flash_copy_SOURCES = \
 	%reldir%/flash_copy.c \
 	flash.c \
 	common.c mtd.c \
-	%reldir%/tmpf.c
+	%reldir%/tmpf.c \
+	%reldir%/system.c
 
 test_flash_erase_SOURCES = \
 	%reldir%/flash_erase.c \
