--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -26,8 +26,7 @@ TEST_MBOX_SRCS = \
 	lpc_reset.c \
 	common.c \
 	flash.c \
-	protocol.c \
-	protocol_negotiate_version.c
+	protocol.c
 
 TEST_MOCK_SRCS = %reldir%/tmpf.c %reldir%/mbox.c %reldir%/system.c
 
