mboxd: Add backend DBus interface and commandline options
Also implement a backend commandline option to mboxctl: `mboxctl
--backend ...`, to allow easy run-time switching of the backend from the
commandline.

Switching between VPNOR and file backends via mboxctl was tested on
Witherspoon, and MTD and file backends on Romulus.

Change-Id: Iaf0e27ecf1d5cdd9e3a31729fb179096bbc37408
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/test/Makefile.am.include
+++ b/test/Makefile.am.include
@@ -35,7 +35,7 @@ TEST_MOCK_CORE = \
 	%reldir%/mbox.c \
 	%reldir%/system.c
 
-TEST_MOCK_SRCS = %reldir%/backend.c $(TEST_MOCK_CORE)
+TEST_MOCK_SRCS = $(TEST_MOCK_CORE)
 
 test_get_mbox_info_v2_SOURCES = %reldir%/get_mbox_info_v2.c \
 				$(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
