--- a/vpnor/Makefile.am.include
+++ b/vpnor/Makefile.am.include
@@ -1,6 +1,6 @@
 mboxd_SOURCES += %reldir%/pnor_partition_table.cpp \
 	%reldir%/backend.cpp \
-	%reldir%/pnor_partition.cpp
+	%reldir%/partition.cpp
 
 mboxd_LDFLAGS += -lstdc++fs \
 	$(SDBUSPLUS_LIBS) \
