--- a/vpnor/test/Makefile.am.include
+++ b/vpnor/test/Makefile.am.include
@@ -7,7 +7,7 @@ TEST_MBOX_VPNOR_INTEG_SRCS = \
 	windows.c \
 	lpc.c \
 	vpnor/backend.cpp \
-	vpnor/pnor_partition.cpp \
+	vpnor/partition.cpp \
 	vpnor/pnor_partition_table.cpp \
 	%reldir%/tmpd.cpp
 
