vpnor: Rename pnor_partition_table sources to table
Change-Id: I95c5129aa81a7b4a4d88ce2f7edf6a10a3c94b98
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/vpnor/Makefile.am.include
+++ b/vpnor/Makefile.am.include
@@ -1,4 +1,4 @@
-mboxd_SOURCES += %reldir%/pnor_partition_table.cpp \
+mboxd_SOURCES += %reldir%/table.cpp \
 	%reldir%/backend.cpp \
 	%reldir%/partition.cpp
 
