Makefiles: Centralise some use of VIRTUAL_PNOR_ENABLED
Better that we try to keep all the conditional junk near the top of the
tree.

Change-Id: Ic9e8dca892dcf15607bace9f630f4d107e1a4b4e
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,7 +42,10 @@ AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
 AM_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
 
 include test/Makefile.am.include
+
+if VIRTUAL_PNOR_ENABLED
 include vpnor/test/Makefile.am.include
+endif
 
 TESTS = $(check_PROGRAMS)
 
