autotools: Fix autoconf-archive compatibility issues
autoconf-archive 2019-01-06 changed the setup of code coverage support.
Deal with both old and new. Based on Patrick Venture's similar patch in
other repositories[1].

[1] https://github.com/openbmc/phosphor-pid-control/commit/90e9dbcae6c1df3127dd3de41f9d1e1b5a438828

Change-Id: I29dae544d8feb462e848ab00c25da188f74686a7
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,13 @@ mboxctl_SOURCES = mboxctl.c
 mboxctl_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
+if AUTOCONF_CODE_COVERAGE_2019_01_06
+include $(top_srcdir)/aminclude_static.am
+clean-local: code-coverage-clean
+distclean-local: code-coverage-dist-clean
+else
 @CODE_COVERAGE_RULES@
+endif
 
 check_PROGRAMS =
 XFAIL_TESTS =
