vpnor: Add writable option
Add an option to find the read-only partitions in the writable
directory for cases where the BMC needs to modify the read-only
partitions to support different system flavors at runtime.

Change-Id: I3fe1875bd6a47aa82e9a1f23bc136a5a4f499c7f
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -63,6 +63,12 @@ AS_IF([test "x$enable_virtual_pnor" != "xno"],
         AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, false)
     ]
 )
+AC_ARG_ENABLE([writable-virtual-pnor],
+    AS_HELP_STRING([--enable-writable-virtual-pnor], [Enable writable virtual pnor support])
+)
+AS_IF([test "x$enable_writable_virtual_pnor" == "xyes"], \
+    [AC_DEFINE([WRITABLE_VIRTUAL_PNOR_ENABLED], [], [Enable writable virtual pnor support.])]
+)
 
 AX_CODE_COVERAGE
 m4_ifdef([_AX_CODE_COVERAGE_RULES],
