Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,21 +1,6 @@
 [project]
 	description = Reference implementation of a mbox-based protocol for host flash abstraction.
 [access]
-	inheritFrom = openbmc-cpp-repos
+	inheritFrom = openbmc-all-repos
 [submit]
 	action = rebase if necessary
-[access "refs/heads/*"]
-	label-Code-Review = -2..+2 group github/openbmc/phosphor-mboxd-maintainers
-	label-Ok-To-Test = +0..+1 group github/openbmc/phosphor-mboxd-maintainers
-	label-Verified = -1..+1 group github/openbmc/phosphor-mboxd-maintainers
-	abandon = group github/openbmc/phosphor-mboxd-maintainers
-	create = group github/openbmc/phosphor-mboxd-maintainers
-	forgeCommitter = group github/openbmc/phosphor-mboxd-maintainers
-	push = +force group github/openbmc/phosphor-mboxd-maintainers
-	rebase = group github/openbmc/phosphor-mboxd-maintainers
-	submit = group github/openbmc/phosphor-mboxd-maintainers
-	editTopicName = group github/openbmc/phosphor-mboxd-maintainers
-[access "refs/tags/*"]
-	createSignedTag = group github/openbmc/phosphor-mboxd-maintainers
-	createTag = group github/openbmc/phosphor-mboxd-maintainers
-	push = +force group github/openbmc/phosphor-mboxd-maintainers
