Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Reference implementation of a mbox-based protocol for host flash abstraction.
+	state = hidden
 [access]
 	inheritFrom = openbmc-all-repos
 [submit]
