--- a/vpnor/Makefile.am.include
+++ b/vpnor/Makefile.am.include
@@ -2,7 +2,7 @@ mboxd_SOURCES += %reldir%/table.cpp \
 	%reldir%/backend.cpp \
 	%reldir%/partition.cpp
 
-mboxd_LDFLAGS += -lstdc++fs \
+mboxd_LDFLAGS += \
 	$(SDBUSPLUS_LIBS) \
 	$(PHOSPHOR_LOGGING_LIBS) \
 	$(PHOSPHOR_DBUS_INTERFACES_LIBS)
