--- a/vpnor/test/Makefile.am.include
+++ b/vpnor/test/Makefile.am.include
@@ -11,7 +11,7 @@ TEST_MBOX_VPNOR_INTEG_SRCS = \
 	vpnor/table.cpp \
 	%reldir%/tmpd.cpp
 
-VPNOR_LDADD = -lstdc++fs \
+VPNOR_LDADD = \
 	$(SDBUSPLUS_LIBS) \
 	$(PHOSPHOR_LOGGING_LIBS) \
 	$(PHOSPHOR_DBUS_INTERFACES_LIBS)
